testsuite/tests/properties/invalid_enum_dflt_val/no_arg.lkt
import common

@with_default() enum MyEnum {
    case a, b, c
}
